[gd_scene load_steps=4 format=3 uid="uid://ci7omqwvvokar"]

[ext_resource type="Script" path="res://scripts/gunbot.gd" id="1_a8qa5"]
[ext_resource type="Texture2D" uid="uid://d1i0xbxjefe02" path="res://assets/graphics/gunbot1.png" id="2_w642h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mihon"]

[node name="Area2D" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_a8qa5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_w642h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mihon")

[node name="ShotTimer" type="Timer" parent="."]

[node name="firing_point" type="Node2D" parent="."]
position = Vector2(1, -12)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
